--- a/web/css/app.css
+++ b/web/css/app.css
@@ -33,6 +33,8 @@ html {
 
 	background:#011627;
 	border-radius:10px;
+	
+	overflow:hidden;
 }
 
 .sidebar h1 {
@@ -50,15 +52,45 @@ html {
 	pointer-events:none;
 }
 
-.sidebar .scroll {
+.sidebar .share {
 	width:100%;
-	height:auto;
+	height:50px;
 	padding:0 25px;
 	display:block;
 	position:absolute;
-	top:100px; right:0; bottom:0; left:0;
+	top:auto; right:0; bottom:0; left:0;
+	
+	font-size:20px;
+	font-weight:600;
+	line-height:50px;
+	text-align:left;
+	text-transform:uppercase;
+	text-decoration:none;
 
-	overflow:auto;
+	color:#2EC4B6;
+	background:none;
+	box-shadow:0 -50px 25px 0 #011627;
+	
+	transition:.1s;
+	cursor:pointer;
+}
+.sidebar .share:hover,
+.sidebar .share:active,
+.sidebar .share:focus {
+	color:#fff;
+	background:#2EC4B6;
+}
+
+.sidebar .scroll {
+	width:100%;
+	height:auto;
+	padding:0 25px 50px 25px;
+	display:block;
+	position:absolute;
+	top:100px; right:0; bottom:50px; left:0;
+	
+	overflow:hidden;
+	overflow-y:auto;
 }
 
 .sidebar .person {
@@ -139,6 +171,18 @@ html {
 }
 .sidebar .person.yellow:before {
 	background:#FF9F1C;
+}
+.sidebar .person.orange {
+	color:#F45D01;
+}
+.sidebar .person.orange:before {
+	background:#F45D01;
+}
+.sidebar .person.purple {
+	color:#3D348B;
+}
+.sidebar .person.purple:before {
+	background:#3D348B;
 }
 
 
@@ -331,6 +375,20 @@ html {
 	color:#fff;
 	background:#FF9F1C;
 }
+.chat .messages .message.notme.orange > span {
+	color:#F45D01;
+}
+.chat .messages .message.notme.orange > p {
+	color:#fff;
+	background:#F45D01;
+}
+.chat .messages .message.notme.purple > span {
+	color:#3D348B;
+}
+.chat .messages .message.notme.purple > p {
+	color:#fff;
+	background:#3D348B;
+}
 
 
 /* MODALS */
@@ -380,6 +438,26 @@ html {
 	text-align:left;
 
 	color:#011627;
+}
+.modal .url {
+	width:100%;
+	height:50px;
+	padding:0 15px;
+	display:block;
+	margin:10px 0;
+
+	font-size:20px;
+	font-weight:600;
+	line-height:50px;
+	text-align:left;
+
+	color:#011627;
+	background:#EEEFED;
+	border-radius:10px;
+	
+	white-space:nowrap;
+	overflow:hidden;
+	overflow-x:scroll;
 }
 .modal input[type=text] {
 	width:100%;
