--- a/web/css/chat.css
+++ b/web/css/chat.css
@@ -52,6 +52,23 @@ html {
 	pointer-events:none;
 }
 
+.sidebar .warning {
+	width:100%;
+	height:100px;
+	padding:25px;
+	display:block;
+	position:absolute;
+	top:0; right:0; bottom:auto; left:0;
+	
+	font-size:20px;
+	font-weight:600;
+	line-height:25px;
+	text-align:left;
+	
+	color:#fff;
+	background:#FF9F1C;
+}
+
 .sidebar .share {
 	width:100%;
 	height:50px;
