--- a/web/css/chat.css
+++ b/web/css/chat.css
@@ -58,12 +58,12 @@ html {
 	display:block;
 	position:absolute;
 	top:0; right:0; bottom:auto; left:0;
-	
+
 	font-size:20px;
 	font-weight:600;
 	line-height:25px;
 	text-align:left;
-	
+
 	color:#fff;
 	background:#FF9F1C;
 }
@@ -318,8 +318,6 @@ html {
 	margin:0 0 25px 0;
 
 	text-align:right;
-
-	pointer-events:none;
 }
 .chat .messages .message > span {
 	width:100%;
@@ -344,11 +342,27 @@ html {
 	font-weight:500;
 	line-height:22px;
 	text-align:left;
-	word-break:break-all;
 
 	background:rgba(0,0,0,0.2);
 	color:#011627;
 	border-radius:10px;
+}
+.chat .messages .message > p a {
+	display:inline-block;
+	
+	font-weight:600;
+	text-decoration:underline;
+	
+	color:inherit;
+	background:none;
+	box-shadow:none;
+	border-radius:2px;
+	
+	transition:.1s;
+}
+.chat .messages .message > p a:hover {
+	background:rgba(0,0,0,0.2);
+	box-shadow:0 0 0 4px rgba(0,0,0,0.2);
 }
 
 .chat .messages .message.notme {
@@ -412,7 +426,7 @@ html {
 	height:auto;
 	display:block;
 	margin:0 0 25px 0;
-	
+
 	font-size:20px;
 	font-weight:600;
 	line-height:50px;
@@ -421,7 +435,7 @@ html {
 	text-transform:capitalize;
 
 	color:rgba(0,0,0,0.5);
-	
+
 	pointer-events:none;
 }
 
@@ -441,11 +455,12 @@ html {
 
 	background:#fff;
 	border-radius:10px;
-	box-shadow:0 0 0 2000px #EEEFED;
+	box-shadow:0 0 0 1000px #EEEFED;
 
 	color:#2EC4B6;
 
-	overflow:auto;
+	overflow:visible;
+	overflow-y:auto;
 }
 
 .modal h1 {
@@ -502,7 +517,7 @@ html {
 	padding:25px;
 	display:block;
 	margin:0 -25px 0 -25px;
-	
+
 	font-size:18px;
 	font-weight:600;
 	line-height:20px;
@@ -593,7 +608,7 @@ html {
 	display:block;
 	position:absolute;
 	top:0; right:0; bottom:0; left:0;
-	
+
 	font-size:20px;
 	font-weight:600;
 	line-height:50px;
@@ -604,7 +619,7 @@ html {
 	color:rgba(0,0,0,0.5);
 	background:#EEEFED;
 	border-radius:10px;
-	
+
 	content:"Loading ...";
 }
 
@@ -626,17 +641,17 @@ html {
 	height:auto;
 	display:block;
 	margin:25px 0 0 0;
-	
+
 	border-radius:10px;
-	
+
 	overflow:hidden;
 }
 .modal .social .button {
 	margin:0;
-	
+
 	border-radius:0;
 	box-shadow:inset 0 50px 0 0 #fff;
-	
+
 	transition:box-shadow 0;
 }
 .modal .social .button:active,
@@ -654,7 +669,7 @@ html {
 	display:block;
 	position:fixed;
 	top:0; right:0; bottom:0; left:0;
-	
+
 	font-size:25px;
 	font-weight:600;
 	line-height:100vh;
@@ -674,7 +689,7 @@ html {
 		height:75px;
 		padding:0;
 		top:25px; right:25px; bottom:auto; left:25px;
-		
+
 		border-radius:10px 10px 0 0;
 	}
 	.sidebar h1 {
@@ -689,7 +704,7 @@ html {
 		padding:0 25px;
 		display:inline-block;
 		position:relative;
-		
+
 		text-align:center;
 		line-height:75px;
 	}
