--- a/web/css/chat.css
+++ b/web/css/chat.css
@@ -349,15 +349,15 @@ html {
 }
 .chat .messages .message > p a {
 	display:inline-block;
-	
+
 	font-weight:600;
 	text-decoration:underline;
-	
+
 	color:inherit;
 	background:none;
 	box-shadow:none;
 	border-radius:2px;
-	
+
 	transition:.1s;
 }
 .chat .messages .message > p a:hover {
@@ -546,6 +546,7 @@ html {
 	color:#011627;
 
 	border:none;
+	border-radius:0;
 	border-bottom:5px solid rgba(0,0,0,0.2);
 	outline:none;
 
@@ -659,6 +660,7 @@ html {
 .modal .social .button:hover {
 	color:#fff!Important;
 	box-shadow:none;
+	box-shadow:inset 0 50px 0 0 rgba(255,255,255,0);
 }
 
 /* PAGE LOADING INDICATOR */
