--- a/web/css/chat.css
+++ b/web/css/chat.css
@@ -297,6 +297,53 @@ html {
 	color:#fff;
 }
 
+.chat .compose input[type=image] {
+	display:none;
+}
+.chat .compose .attach {
+	width:75px;
+	height:75px;
+	display:block;
+	position:absolute;
+	top:0; right:100px; bottom:0; left:auto;
+	
+	background:none;
+	background-image:url(/images/attach.svg);
+	background-position:0 2px;
+	background-size:75px 150px;
+	
+	cursor:pointer;
+}
+.chat .compose .attach:hover,
+.chat .compose .attach:active,
+.chat .compose .attach:focus {
+	background-position:0 77px;
+}
+
+.chat .compose.sending {
+	pointer-events:none;
+}
+.chat .compose.sending .send:before {
+	/* TODO: Make this nicer */
+	height:100%;
+	width:100%;
+	display:block;
+	position:absolute;
+	top:0; right:0; bottom:0; left:0;
+
+	font-size:20px;
+	font-weight:600;
+	line-height:75px;
+	text-decoration:none;
+	text-align:center;
+	text-transform:capitalize;
+
+	color:rgba(0,0,0,0.5);
+	background:#EEEFED;
+
+	content:"...";
+}
+
 /* CHAT MESSAGES */
 
 .chat .messages {
@@ -345,7 +392,7 @@ html {
 
 	background:rgba(0,0,0,0.2);
 	color:#011627;
-	border-radius:10px;
+	border-radius:10px
 }
 .chat .messages .message > p a {
 	display:inline-block;
@@ -363,6 +410,16 @@ html {
 .chat .messages .message > p a:hover {
 	background:rgba(0,0,0,0.2);
 	box-shadow:0 0 0 4px rgba(0,0,0,0.2);
+}
+
+.chat .messages .message > img {
+	width:350px;
+	max-width:90%;
+	height:auto;
+	display:inline-block;
+
+	background:rgba(0,0,0,0.2);
+	border-radius:10px
 }
 
 .chat .messages .message.notme {
@@ -490,6 +547,15 @@ html {
 
 	color:#011627;
 }
+.modal img {
+	width:100%;
+	height:auto;
+	display:block;
+	margin:25px 0 0 0;
+	
+	background:#EEEFED;
+	border-radius:10px;
+}
 .modal .url {
 	width:100%;
 	height:50px;
@@ -599,6 +665,26 @@ html {
 	background:#2EC4B6;
 }
 
+.modal .button.error {
+	color:#E71D36;
+}
+.modal .button.error:active,
+.modal .button.error:focus,
+.modal .button.error:hover {
+	color:#fff;
+	background:#E71D36;
+}
+
+.modal .button.cancel {
+	color:#FF9F1C;
+}
+.modal .button.cancel:active,
+.modal .button.cancel:focus,
+.modal .button.cancel:hover {
+	color:#fff;
+	background:#FF9F1C;
+}
+
 .modal .button.loading {
 	pointer-events:none;
 }
@@ -626,15 +712,6 @@ html {
 
 .modal.error {
 	color:#E71D36;
-}
-.modal.error .button {
-	color:#FF9F1C;
-}
-.modal.error .button:active,
-.modal.error .button:focus,
-.modal.error .button:hover {
-	color:#fff;
-	background:#FF9F1C;
 }
 
 .modal .social {
