--- a/web/css/landing.css
+++ b/web/css/landing.css
@@ -23,6 +23,15 @@ html {
 	overflow-y:auto;
 }
 
+*::selection {
+    color:inherit;
+    background:rgba(0,0,0,0.2);
+}
+*::-moz-selection {
+    color:inherit;
+    background:rgba(0,0,0,0.2);
+}
+
 /* HEADER ELEMENT */
 
 .header {
