--- a/web/css/chat.css
+++ b/web/css/chat.css
@@ -108,8 +108,22 @@ html {
 	color:#fff;
 	background:#2EC4B6;
 }
-.sidebar .button.share {
-	top:auto; right:0; bottom:50px; left:0;
+
+.sidebar .more {
+	width:100%;
+	height:auto;
+	max-height:100%;
+	padding:0 0 50px 0;
+	display:block;
+	position:absolute;
+	top:auto; right:0; bottom:0; left:0;
+	
+	background:#011627;
+	
+	overflow-y:auto;
+}
+.sidebar .more .button {
+	position:relative;
 }
 
 .sidebar .scroll {
@@ -118,7 +132,7 @@ html {
 	padding:0 25px;
 	display:block;
 	position:absolute;
-	top:100px; right:0; bottom:100px; left:0;
+	top:100px; right:0; bottom:50px; left:0;
 
 	overflow:hidden;
 	overflow-y:auto;
@@ -497,6 +511,7 @@ html {
 .chat .messages .message.notme {
 	text-align:left;
 }
+
 .chat .messages .message.sending,
 .chat .messages .message-transition.sending {
 	opacity:0.5;
@@ -664,6 +679,10 @@ html {
 	opacity:0;
 }
 
+.modal.large {
+	width:600px;
+}
+
 .modal h1 {
 	width:100%;
 	height:auto;
@@ -711,11 +730,15 @@ html {
 	font-weight:700;
 	line-height:25px;
 	text-align:left;
+	text-decoration:none;
 	word-break:break-all;
 
 	color:#011627;
 	background:#EEEFED;
 	border-radius:10px;
+}
+.modal .url:hover {
+	text-decoration:underline;
 }
 .modal .error,
 .modal .warning {
@@ -833,6 +856,78 @@ html {
 	background-color:#2EC4B6;
 }
 
+.modal .chat-list {
+	width:100%;
+	height:60px;
+	padding:0;
+	display:block;
+	margin:25px 0 0 0;
+	
+	text-decoration:none;
+	
+	color:#011627;
+	background:none;
+	box-shadow:none;
+	border-radius:3px;
+
+	transition:all .1s;
+	cursor:pointer;
+}
+.modal .chat-list:hover {
+	background:rgba(0,0,0,0.2);
+	box-shadow:0 0 0 10px rgba(0,0,0,0.2);
+}
+.modal .chat-list h1 {
+	width:100%;
+	height:40px;
+	display:block;
+	
+	font-size:25px;
+	line-height:30px;
+	text-transform:capitalize;
+	text-overflow:ellipsis;
+	
+	color:inherit;
+	
+	white-space:nowrap;
+	overflow:hidden;
+}
+.modal .chat-list h2 {
+	width:100%;
+	height:20px;
+	display:block;
+	
+	font-size:20px;
+	line-height:20px;
+	text-overflow:ellipsis;
+	
+	color:rgba(0,0,0,0.5);
+	
+	white-space:nowrap;
+	overflow:hidden;
+}
+.modal .chat-list.blue {
+	color:#359AFF;
+}
+.modal .chat-list.pink {
+	color:#F92C89;
+}
+.modal .chat-list.green {
+	color:#2EC4B6;
+}
+.modal .chat-list.red {
+	color:#E71D36;
+}
+.modal .chat-list.yellow {
+	color:#FF9F1C;
+}
+.modal .chat-list.orange {
+	color:#F45D01;
+}
+.modal .chat-list.purple {
+	color:#3D348B;
+}
+
 .modal .button {
 	width:100%;
 	height:50px;
@@ -882,6 +977,31 @@ html {
 	background:#FF9F1C;
 }
 
+.modal .button.dark {
+	color:#011627;
+}
+.modal .button.dark:active,
+.modal .button.dark:focus,
+.modal .button.dark:hover {
+	color:#fff;
+	background:#011627;
+}
+
+.modal .multi-button {
+	width:100%;
+	height:auto;
+	display:block;
+	margin:25px 0 0 0;
+
+	border-radius:10px;
+
+	overflow:hidden;
+}
+.modal .multi-button .button {
+	margin:0;
+	border-radius:0;
+}
+
 .modal .button.loading {
 	pointer-events:none;
 }
@@ -911,32 +1031,6 @@ html {
 	color:#E71D36;
 }
 
-.modal .social {
-	width:100%;
-	height:auto;
-	display:block;
-	margin:25px 0 0 0;
-
-	border-radius:10px;
-
-	overflow:hidden;
-}
-.modal .social .button {
-	margin:0;
-
-	border-radius:0;
-	box-shadow:inset 0 50px 0 0 #fff;
-
-	transition:box-shadow 0;
-}
-.modal .social .button:active,
-.modal .social .button:focus,
-.modal .social .button:hover {
-	color:#fff!Important;
-	box-shadow:none;
-	box-shadow:inset 0 50px 0 0 rgba(255,255,255,0);
-}
-
 /* PAGE LOADING INDICATOR */
 
 .full-loading {
@@ -961,39 +1055,11 @@ html {
 @media (max-width: 600px) {
 	/* SIDEBAR */
 	.sidebar {
-		width:auto;
-		height:75px;
-		padding:0;
-		top:25px; right:25px; bottom:auto; left:25px;
-	}
-	.sidebar h1 {
-		display:none;
-	}
-	.sidebar .warning {
-		padding:12px 25px;
-	}
-	.sidebar .button.share {
-		width:100%;
-		height:75px;
-		padding:0 25px;
-		display:inline-block;
-		position:relative;
-		top:0; right:0; bottom:0; left:0;
-
-		text-align:center;
-		line-height:75px;
-	}
-	.sidebar .button.settings {
-		display:none;
-	}
-	.sidebar .scroll {
+		/*WIP*/
 		display:none;
 	}
 	/* CHAT */
 	.chat {
-		top:100px; right:25px; bottom:25px; left:25px;
-	}
-	.chat .messages {
-		padding:25px 0;
+		top:25px; right:25px; bottom:25px; left:25px;
 	}
 }
