--- a/web/css/landing.css
+++ b/web/css/landing.css
@@ -42,35 +42,20 @@ html {
 }
 .header h1 {
 	width:500px;
-	height:500px;
+	max-width:90%;
+	height:100px;
 	display:block;
 	margin:25px auto 0 auto;
 
 	font-family:'Montserrat', 'Roboto', sans-serif;
-	font-size:75px;
+	font-size:60px;
 	font-weight:700;
 	text-align:center;
-	text-shadow:0 5px #359AFF, 0 -5px #359AFF, 5px 0 #359AFF, -5px 0 #359AFF, 5px 5px #359AFF, -5px -5px #359AFF, 5px -5px #359AFF, -5px 5px #359AFF;
-	line-height:200px;
-
-	border-radius:250px;
-	background-image:url(/images/pattern.svg);
-	background-position:left top;
-	background-repeat:repeat;
-	background-origin:border-box;
-	background-size:50px 50px;
-
-	color:#EEEFED;
-}
-.header .screenshot {
-	width:400px;
-	max-width:90%;
-	height:auto;
-	display:block;
-	margin:-325px auto 0 auto;
+	line-height:100px;
 
 	border-radius:10px;
-	box-shadow:10px 10px rgba(0,0,0,0.3);
+	color:#EEEFED;
+	background:#359AFF;
 }
 
 /* MAIN CONTENT HOLDER */
@@ -80,7 +65,7 @@ html {
 	height:auto;
 	padding:25px;
 	display:block;
-	margin:50px auto 0 auto;
+	margin:0 auto;
 }
 
 /* FEATURE HIGHLIGHT */
@@ -223,7 +208,7 @@ html {
 	margin:0 10px;
 
 	font-size:15px;
-	font-weight:400;
+	font-weight:500;
 	text-transform:capitalize;
 	text-decoration:none;
 	line-height:25px;
@@ -237,14 +222,6 @@ html {
 /* SMALL SCREENS */
 
 @media (max-width: 550px) {
-	.header h1 {
-		width:100%;
-		max-width:100%;
-		margin:0 auto;
-
-		border-radius:0;
-	}
-
 	.feature {
 		white-space:normal;
 	}
