--- a/web/css/chat.css
+++ b/web/css/chat.css
@@ -438,6 +438,7 @@ html {
 
   overflow:hidden;
   overflow-y:auto;
+  -webkit-overflow-scrolling: touch;
 }
 
 .chat .message {
@@ -601,7 +602,7 @@ html {
   font-size:25px;
   font-weight:700;
   line-height:30px;
-  line-break:break-all;
+  word-break:break-all;
   text-align:left;
   text-overflow:ellipsis;
 
