--- a/web/css/chat.css
+++ b/web/css/chat.css
@@ -501,16 +501,26 @@ html {
   opacity:1;
   transition:all .2s ease-out;
 }
-.chat .message-enter {
+.chat .message-enter,
+.chat .message-leave {
   opacity:0;
   -webkit-transform:translate(50px, 0);
   -ms-transform:translate(50px, 0);
   transform:translate(50px, 0);
 }
-.chat .message-enter.notme {
+.chat .message-enter.notme,
+.chat .message-leave.notme {
   -webkit-transform:translate(-50px, 0);
   -ms-transform:translate(-50px, 0);
   transform:translate(-50px, 0);
+}
+.chat .message-leave {
+  height:0;
+  padding-top:0;
+  padding-bottom:0;
+  margin-top:0;
+  margin-bottom:0;
+  overflow-y:visible;
 }
 
 .chat .message * {
@@ -563,7 +573,7 @@ html {
 .chat .message .from {
   width:100%;
   height:25px;
-  padding:0 5px;
+  padding:0 0 0 5px;
   display:block;
 
   font-size:15px;
@@ -575,6 +585,64 @@ html {
   white-space:nowrap;
   overflow:hidden;
   background:none;
+}
+.chat .message .from span {
+  background:none;
+}
+.chat .message .from .edit-notice {
+  width:auto;
+  height:25px;
+  display:inline-block;
+
+  font-size:15px;
+  font-weight:700;
+  font-style:normal;
+  line-height:25px;
+  text-decoration:none;
+  text-align:center;
+
+  color:rgba(0,0,0,0.5);
+  background:none;
+
+  transition:.1s;
+  cursor:pointer;
+}
+.chat .message .from .edit-button {
+  width:auto;
+  height:25px;
+  padding:0 5px;
+  display:inline-block;
+  margin:0 0 0 5px;
+
+  font-size:15px;
+  font-weight:700;
+  font-style:normal;
+  line-height:25px;
+  text-decoration:none;
+  text-align:center;
+  text-transform:uppercase;
+
+  color:rgba(0,0,0,0.5);
+  background:none;
+  border-radius:6px;
+
+  transition:.1s;
+  cursor:pointer;
+}
+.chat .message .from .edit-button:active,
+.chat .message .from .edit-button:focus,
+.chat .message .from .edit-button:hover {
+  color:#fff;
+  background:rgba(0,0,0,0.5);
+}
+.chat .message .from .edit-button.red {
+  color:#E71D36;
+}
+.chat .message .from .edit-button.red:active,
+.chat .message .from .edit-button.red:focus,
+.chat .message .from .edit-button.red:hover {
+  color:#fff;
+  background:#E71D36;
 }
 
 .chat .message .text {
